# ros2_utils_tool

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  uncrustify.cfg
.github/workflows/: humble.yml  jazzy.yml  kilted.yml  rolling.yml
resources/: resources.qrc
src/: main.cpp
src/cli/: BagTF2ToFile.cpp  BagToImages.cpp  BagToPCDs.cpp  BagToVideo.cpp  CMakeLists.txt  CompressBag.cpp  DecompressBag.cpp  DummyBag.cpp  MergeBags.cpp  PCDsToBag.cpp  PublishImages.cpp  PublishVideo.cpp  SendTF2.cpp  TF2ToFile.cpp  TF2ToJson.cpp  VideoToBag.cpp
src/ros/: BagPlayer.cpp  BagPlayer.hpp  CMakeLists.txt
src/ros/thread/: BagFromPCDsThread.cpp  BagFromPCDsThread.hpp  BagTF2ToFileThread.cpp  BagTF2ToFileThread.hpp  BagToFileThread.cpp  BagToFileThread.hpp  BagToImagesThread.cpp  BagToImagesThread.hpp  BagToPCDsThread.cpp  BagToPCDsThread.hpp  BagToVideoThread.cpp  BagToVideoThread.hpp  BasicThread.hpp  CMakeLists.txt  ChangeCompressionBagThread.cpp  ChangeCompressionBagThread.hpp  CompressBagThread.cpp  CompressBagThread.hpp  DummyBagThread.cpp  DummyBagThread.hpp  EditBagThread.cpp  EditBagThread.hpp  MergeBagsThread.cpp  MergeBagsThread.hpp  PCDsToBagThread.cpp  PCDsToBagThread.hpp  PlayBagThread.cpp  PublishImagesThread.cpp  PublishImagesThread.hpp  PublishVideoThread.cpp  PublishVideoThread.hpp  RecordBagThread.cpp  RecordBagThread.hpp  SendTF2Thread.cpp  SendTF2Thread.hpp  TF2ToFileThread.cpp  TF2ToFileThread.hpp  TF2ToJsonThread.cpp  TF2ToJsonThread.hpp  VideoToBagThread.cpp  (+4 more)
src/ros/thread/cv_bridge/: CMakeLists.txt
src/ros/thread/play_bag/: CMakeLists.txt  PlayBagThread.hpp
src/ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  ProgressWidget.cpp  ProgressWidget.hpp  SettingsDialog.cpp  SettingsDialog.hpp  StartWidget.cpp  StartWidget.hpp
src/ui/ConfigWidgets/: CMakeLists.txt  PlayBagConfigWidget.cpp  PlayBagConfigWidget.hpp
src/ui/HelperWidgets/: BasicBagWidget.cpp  BasicBagWidget.hpp  CMakeLists.txt  DummyTopicWidget.cpp  LowDiskSpaceWidget.cpp  LowDiskSpaceWidget.hpp  TopicComboBoxWidget.cpp  TopicComboBoxWidget.hpp  TopicListingInputWidget.cpp  TopicListingInputWidget.hpp  TopicWidget.cpp  TopicWidget.hpp
src/ui/InputWidgets/: AdvancedInputWidget.cpp  AdvancedInputWidget.hpp  BagInfoWidget.cpp  BagToFileWidget.cpp  BagToFileWidget.hpp  BagToImagesWidget.cpp  BagToImagesWidget.hpp  BagToPCDsWidget.cpp  BagToPCDsWidget.hpp  BagToVideoWidget.cpp  BagToVideoWidget.hpp  BasicInputWidget.cpp  BasicInputWidget.hpp  CMakeLists.txt  ChangeCompressionWidget.cpp  ChangeCompressionWidget.hpp  CompressBagWidget.cpp  CompressBagWidget.hpp  ConfigurePlayBagWidget.cpp  DummyBagWidget.cpp  DummyBagWidget.hpp  EditBagWidget.cpp  EditBagWidget.hpp  MergeBagsWidget.cpp  MergeBagsWidget.hpp  PCDsToBagWidget.cpp  PCDsToBagWidget.hpp  PublishWidget.cpp  PublishWidget.hpp  RecordBagWidget.cpp  RecordBagWidget.hpp  SendTF2Widget.cpp  SendTF2Widget.hpp  TF2ToFileWidget.cpp  TF2ToFileWidget.hpp  TF2ToJsonWidget.cpp  TF2ToJsonWidget.hpp  TopicsServicesInfoWidget.cpp  TopicsServicesInfoWidget.hpp  VideoToBagWidget.cpp  (+1 more)
src/ui/ProgressWidgets/: CMakeLists.txt  PlayBagProgressWidget.cpp  PlayBagProgressWidget.hpp
src/ui/input/: AdvancedInputWidget.cpp  AdvancedInputWidget.hpp  BasicInputWidget.cpp  BasicInputWidget.hpp  CMakeLists.txt
src/ui/input/bag/: AdvancedBagWidget.cpp  AdvancedBagWidget.hpp  BagTreeWidget.cpp  BagTreeWidget.hpp  BasicBagWidget.cpp  BasicBagWidget.hpp  CMakeLists.txt  ChangeCompressionWidget.cpp  ChangeCompressionWidget.hpp  ConfigurePlayBagWidget.cpp  ConfigurePlayBagWidget.hpp  DummyBagWidget.cpp  EditBagWidget.cpp  EditBagWidget.hpp  MergeBagsWidget.cpp  MergeBagsWidget.hpp  RecordBagWidget.cpp  RecordBagWidget.hpp
src/ui/input/conversion/: BagTF2ToFileWidget.cpp  BagTF2ToFileWidget.hpp  BagToImagesWidget.cpp  BagToImagesWidget.hpp  BagToPCDsWidget.cpp  BagToPCDsWidget.hpp  BagToVideoWidget.cpp  BagToVideoWidget.hpp  CMakeLists.txt  PCDsToBagWidget.cpp  PCDsToBagWidget.hpp  VideoToBagWidget.cpp  VideoToBagWidget.hpp
src/ui/input/helper/: BasicBagWidget.cpp  CMakeLists.txt  LowDiskSpaceWidget.cpp  MessageCountWidget.hpp  TopicComboBoxWidget.cpp  TopicComboBoxWidget.hpp  TopicListingInputWidget.cpp  TopicListingInputWidget.hpp  TopicWidget.cpp
src/ui/input/info/: BagInfoWidget.cpp  BagInfoWidget.hpp  CMakeLists.txt  TopicsServicesInfoWidget.cpp
src/ui/input/publishing/: CMakeLists.txt  PublishWidget.cpp  PublishWidget.hpp  SendTF2Widget.cpp  SendTF2Widget.hpp
src/ui/interactive/: CMakeLists.txt  ControlPlayBagWidget.cpp  ControlPlayBagWidget.hpp
src/ui/settings/: CMakeLists.txt  DialogSettings.cpp  DialogSettings.hpp  (+1 more)
src/ui/settings/input/: AdvancedSettings.cpp  AdvancedSettings.hpp  BagToFileSettings.cpp  BagToFileSettings.hpp  BagToImagesSettings.cpp  BagToImagesSettings.hpp  BagToVideoSettings.cpp  BagToVideoSettings.hpp  BasicSettings.cpp  BasicSettings.hpp  CMakeLists.txt  CompressBagSettings.cpp  CompressBagSettings.hpp  DeleteSourceSettings.cpp  DeleteSourceSettings.hpp  DummyBagSettings.cpp  DummyBagSettings.hpp  EditBagSettings.cpp  EditBagSettings.hpp  MergeBagsSettings.cpp  MergeBagsSettings.hpp  PCDsToBagSettings.cpp  PCDsToBagSettings.hpp  PlayBagSettings.cpp  PlayBagSettings.hpp  PublishSettings.cpp  PublishSettings.hpp  RGBSettings.cpp  RGBSettings.hpp  RecordBagSettings.cpp  RecordBagSettings.hpp  SelectableBagTopicSettings.cpp  SelectableBagTopicSettings.hpp  SendTF2Settings.cpp  SendTF2Settings.hpp  TF2ToFileSettings.cpp  TF2ToFileSettings.hpp  TF2ToJsonSettings.cpp  TF2ToJsonSettings.hpp  VideoSettings.cpp  (+3 more)
src/utils/: CMakeLists.txt  NodeWrapper.hpp  Parameters.hpp  UtilsCLI.cpp  UtilsCLI.hpp  UtilsGeneral.cpp  UtilsGeneral.hpp  UtilsIO.cpp  UtilsIO.hpp  UtilsROS.cpp  UtilsROS.hpp  UtilsROSCompression.cpp  UtilsROSCompression.hpp  UtilsThreads.hpp  UtilsUI.cpp  UtilsUI.hpp  VideoEncoder.hpp
test/: CMakeLists.txt  main.cpp
test/ros/threads/: ThreadsTest.cpp
test/ui/input/bag/: BagTreeWidgetTest.cpp
test/ui/settings/: SettingsTest.cpp
test/utils/: UtilsCLITest.cpp  UtilsIOTest.cpp  UtilsROSTest.cpp  UtilsUITest.cpp
